
API Changes
---------------------
(No changes)

New Features
---------------------
(No changes)

Improvements
---------------------
(No changes)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------
(No changes)

Other
---------------------
(No changes)

======================= Lucene 10.1.0 =======================

API Changes
---------------------
(No changes)

New Features
---------------------
(No changes)

Improvements
---------------------
(No changes)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------
* GITHUB#13832: Fixed an issue where the DefaultPassageFormatter.format method did not format passages as intended
  when they were not sorted by startOffset. (Seunghan Jung)

Other
---------------------
(No changes)

======================= Lucene 10.0.0 =======================

API Changes
---------------------
* LUCENE-12092: Remove deprecated UTF8TaxonomyWriterCache. Please use LruTaxonomyWriterCache
  instead. (Vigya Sharma)

* LUCENE-10010: AutomatonQuery, CompiledAutomaton, RunAutomaton, RegExp
  classes no longer determinize NFAs. Instead it is the responsibility
  of the caller to determinize.  (Robert Muir)

* LUCENE-10368: IntTaxonomyFacets has been make pkg-private and serves only as an internal
  implementation detail of taxonomy-faceting. (Greg Miller)

* LUCENE-10400: Remove deprecated dictionary constructors in Kuromoji and Nori (Tomoko Uchida)

* LUCENE-10440: TaxonomyFacets and FloatTaxonomyFacets have been made pkg-private and only serve
  as internal implementation details of taxonomy-faceting. (Greg Miller)

* LUCENE-10431: MultiTermQuery.setRewriteMethod() has been removed. (Alan Woodward)

* LUCENE-10436: Remove deprecated DocValuesFieldExistsQuery, NormsFieldExistsQuery and
  KnnVectorFieldExistsQuery. (Zach Chen, Adrien Grand)

* LUCENE-10561: Reduce class/member visibility of all normalizer and stemmer classes. (Rushabh Shah)
